assets/test-package/tests/failing/persistent-compile-failure/test.typ
#import "/src/lib.typ": helper

#helper[Persistent Compile Failure]
